# Botkin

./: .cursorrules  .dockerignore  .env.example  .env.production.example  .gitignore  .openai_api_key  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BACKUP_SUMMARY.md  CLAUDE.md  COMPLETE_MEDICAL_DATA.md  Dockerfile  Dockerfile.bot  GITHUB_SETUP.md  HEALTH.md  HEALTH_PROFILE.md  HOW_TO_WORK_WITH_CONTEXT.md  KNOWLEDGE_BASE.md  Makefile  NOTICE  ONBOARDING.md  PROJECTS.md  QUICK_START.md  README.md  RESTORE_BACKUP.md  ROADMAP.md  SETUP.md  alembic.ini  cleanup_old_server.exp  comprehensive_analysis_2025.md  deploy.sh  deploy_to_new_server.exp  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  knowledge_base.json  list_gemini_models.py  migrate_data_from_remote.exp  migrate_db_to_server.sh  (+6 more)
.claude/: launch.json  settings.json
config/: __init__.py  models.py  settings.py  users.py
core/: _version.py  agent_chat.py  api_key_loader.py  apple_health_parser.py  caloric_budget.py  chatgpt_vision.py  common_config.py  description_parser.py  feedback_notify.py  garmin_data.py  gemini_vision.py  llm_food_processor.py  llm_models.py  llm_router.py  llm_usage.py  menu_meal_processor.py  menu_parser.py  nutrition.py  nutrition_targets.py  ocr_weight.py  packs.py  personas.py  product_search.py  storage.py  supplements.py  tg_markdown.py  voice_service.py  weekly_nutrition.py  weight_extraction.py  weights.py
data/: apple_health_blood_pressure.json  apple_health_gait.json  apple_health_heart_rate.json  apple_health_steps_daily.json  apple_health_weight.json  apple_health_weight_daily.json  body_measurements.json  health_goals.json  products.json  supplements.json  zepp_export_latest.csv
database/: __init__.py  create_apple_health_table.py  crud.py  init.sql  models.py  repository.py
deploy/: dev-env-overrides.example  required-prod-env
deploy_temp/: Dockerfile  requirements.txt
docs/: 2026-04-21-architectural-review.md  ANALYSIS_ERRORS_PREVENTION.md  (+21 more)
(+1134 files in other folders)
